--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-#root {
+/* #root {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   gap: 30px;
-}
+} */
 
 .buttonBox {
   display: flex;
